@@ -43,6 +43,11 @@ dependencies {
 test {
 	useJUnitPlatform()
 
+	jvmArgs = [
+		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
+		"--add-opens", "java.base/java.util=ALL-UNNAMED"
+	]
+
 	testLogging {
 		events = [ "FAILED", "PASSED", "SKIPPED" ]
 		showExceptions = true
